--- a/Alaska 03FEB.html
+++ b/Alaska 03FEB.html
@@ -1,12 +1,13 @@
-
 <!doctype html>
 <html lang="en">
 <head>
     <title>Alaska Earthquake Map</title>
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
-    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
-    <!-- PapaParse Library for CSV reading -->
-    <script src="https://cdnjs.cloudflare.com"></script>
+    <!-- Leaflet CSS & JS -->
+    <link rel="stylesheet" href="https://unpkg.com" />
+    <script src="https://unpkg.com"></script>
+    
+    <!-- FIXED PapaParse Library Link -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.1/papaparse.min.js"></script>
 
     <style>
         body { margin:0; padding:0; }
@@ -18,26 +19,28 @@
 <div id="mapdiv"></div>
 
 <script>
-    var mymap = L.map('mapdiv').setView([64.0, -150.0], 5);
+    // Adjust view to show more of Alaska
+    var mymap = L.map('mapdiv').setView([64.0, -150.0], 4);
 
-    L.tileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+    // FIXED: Changed 'http' to 'https' to prevent GitHub security blocks
+    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
         maxZoom: 18,
-        attribution: 'Map data &copy; OpenStreetMap'
+        attribution: 'Map data &copy; <a href="https://openstreetmap.org">OpenStreetMap</a>'
     }).addTo(mymap);
 
-    // Function to load and parse CSV
     function loadCSV() {
+        // Ensure this filename matches EXACTLY what you uploaded to GitHub
         Papa.parse("Alaska Earthquakes to Print.csv", {
             download: true,
             header: true,
-            dynamicTyping: true, // Automatically converts strings to numbers
+            dynamicTyping: true,
             complete: function(results) {
+                console.log("Data loaded:", results.data.length, "rows");
                 results.data.forEach(function(row) {
+                    // Check if latitude and longitude exist in this row
                     if (row.latitude && row.longitude) {
-                        // Create a circle marker based on depth
-                        // Radius is in meters; adjust multiplier as needed for visualization
                         L.circle([row.latitude, row.longitude], {
-                            radius: row.depth * 500, 
+                            radius: (row.depth || 1) * 500, // Multiplier for visibility
                             color: 'red',
                             fillColor: '#f03',
                             fillOpacity: 0.5
@@ -48,6 +51,9 @@
                         .addTo(mymap);
                     }
                 });
+            },
+            error: function(err) {
+                console.error("Error loading CSV:", err);
             }
         });
     }
