--- a/Alaska 03FEB.html
+++ b/Alaska 03FEB.html
@@ -3,68 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <title>Alaska Earthquake Map</title>
-    
-    <!-- 1. ESSENTIAL LEAFLET CSS (Pasted directly to bypass block) -->
+    <!-- Use the most 'trusted' CDN on the web (Cloudflare) -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com" />
     <style>
-        .leaflet-container { overflow: hidden; }
-        .leaflet-pane, .leaflet-tile, .leaflet-marker-icon, .leaflet-marker-shadow, .leaflet-tile-container, .leaflet-pane > svg, .leaflet-pane > canvas, .leaflet-zoom-box, .leaflet-image-layer, .leaflet-layer { position: absolute; left: 0; top: 0; }
-        .leaflet-tile, .leaflet-marker-icon, .leaflet-marker-shadow { user-select: none; -webkit-user-drag: none; }
-        .leaflet-tile { filter: inherit; visibility: hidden; }
-        .leaflet-tile-loaded { visibility: inherit; }
-        .leaflet-zoom-animated { transform-origin: 0 0; }
-        .leaflet-map-pane svg { pointer-events: none; }
-        .leaflet-marker-icon, .leaflet-marker-shadow { display: block; }
-        #mapdiv { height: 100vh; width: 100%; background: #ddd; }
-        body { margin: 0; }
+        html, body, #mapdiv { height: 100%; width: 100%; margin: 0; padding: 0; background: #eee; }
     </style>
-
-    <!-- 2. ROBUST SCRIPT LINKS (Using Cloudflare) -->
-    <script src="https://cdnjs.cloudflare.com"></script>
-    <script src="https://cdnjs.cloudflare.com"></script>
 </head>
 <body>
+    <div id="mapdiv"></div>
 
-<div id="mapdiv"></div>
+    <!-- Load Scripts from Cloudflare -->
+    <script src="https://cdnjs.cloudflare.com"></script>
+    <script src="https://cdnjs.cloudflare.com"></script>
 
-<script>
-    // Initialize map immediately
-    var mymap = L.map('mapdiv').setView([64.0, -150.0], 4);
-
-    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-        attribution: '&copy; OpenStreetMap'
-    }).addTo(mymap);
-
-    // Function to parse the CSV
-    function startMapping() {
-        Papa.parse("Alaska Earthquakes to Print.csv", {
-            download: true,
-            header: true,
-            dynamicTyping: true,
-            complete: function(results) {
-                results.data.forEach(function(row) {
-                    if (row.latitude && row.longitude) {
-                        // Creating the circles
-                        L.circle([row.latitude, row.longitude], {
-                            radius: (row.depth || 1) * 500,
-                            color: 'red',
-                            fillOpacity: 0.5
-                        })
-                        .bindPopup("<b>" + (row.place || "Earthquake") + "</b><br>Depth: " + row.depth + "km")
-                        .addTo(mymap);
-                    }
-                });
+    <script>
+        // Use a function to wait until libraries exist
+        function init() {
+            if (typeof L === 'undefined' || typeof Papa === 'undefined') {
+                console.log("Retrying in 500ms...");
+                setTimeout(init, 500);
+                return;
             }
-        });
-    }
 
-    // Check if libraries loaded, then run
-    window.onload = function() {
-        if (typeof L !== 'undefined' && typeof Papa !== 'undefined') {
-            startMapping();
-        } else {
-            alert("Security settings are still blocking the map scripts.");
+            var mymap = L.map('mapdiv').setView([64.0, -150.0], 4);
+            
+            // Standard Tile Layer
+            L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png').addTo(mymap);
+
+            Papa.parse("Alaska Earthquakes to Print.csv", {
+                download: true,
+                header: true,
+                dynamicTyping: true,
+                complete: function(results) {
+                    results.data.forEach(function(row) {
+                        if (row.latitude && row.longitude) {
+                            L.circle([row.latitude, row.longitude], {
+                                radius: (row.depth || 1) * 500,
+                                color: 'red',
+                                fillOpacity: 0.5
+                            }).addTo(mymap);
+                        }
+                    });
+                }
+            });
         }
-    };
-</script>
+        init();
+    </script>
 </body>
 </html>
