--- a/index.html
+++ b/index.html
@@ -34,6 +34,36 @@ function getColor(depth) {
 
     }
 
+
+
+var legend = L.control({ position: "bottomright" });
+
+legend.onAdd = function (map) {
+    var div = L.DomUtil.create("div", "info legend");
+
+    div.innerHTML = `
+        <h4>Earthquake Depth (km)</h4>
+        <i style="background:#ffff66"></i> 0–40<br>
+        <i style="background:#3399ff"></i> 40.1–90<br>
+        <i style="background:#ff9933"></i> 90.1–140<br>
+        <i style="background:#9933cc"></i> > 140.1
+    `;
+
+    return div;
+};
+
+legend.addTo(map);
+
+
+
+
+
+
+
+
+
+
+
     Papa.parse("Alaska Earthquakes to Print.csv", {
         download: true,
         header: true,
@@ -76,17 +106,6 @@ results.data.forEach(function(eq) {
 </body>
 </html>
 
-
-
-
-
-
-
-Right now, the map is providing three colored circles (yellow, orange, and red) based on depth.  I would like to change that to four different colors: yellow, blue, orange, and purple based on the following depths: 0-40; 40.1-90; 90.1-140; more than 140.1.  How can I change the following code:
-    function getColor(depth) {
-        if (depth < 10) return "yellow";
-        if (depth < 50) return "orange";
-        return "red";
 
 
 
